@@ -1,47 +1,0 @@
-name: Raspberry Pi - Core
-
-on:
-  release:
-    types: [published]
-  # pull_request:
-
-jobs:
-  build-core-pi:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: [self-hosted, linux, ARM, pi-3]
-            destination: "raspberry-pi-3_arm"
-          - os: [self-hosted, linux, ARM64, pi-4]
-            destination: "raspberry-pi-4_arm64"
-    env:
-      GIT_COMMIT: ${{ github.sha }}
-      SYNERGY_NO_LEGACY: "1"
-      SYNERGY_NO_TESTS: "1"
-      SYNERGY_STATIC_OPENSSL: "1"
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Build
-        run: |
-          mkdir -p build; cd build
-          cmake -DCMAKE_BUILD_TYPE=Release ..
-          make
-
-      - uses: shallwefootball/s3-upload-action@master
-        if: "github.event_name == 'release'"
-        with:
-          aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: ./build/bin
-          destination_dir: "./synergy3/latest/${{ matrix.destination }}"
-
-      - uses: actions/upload-artifact@v2
-        if: "github.event_name == 'pull_request'"
-        with:
-          name: ${{ matrix.destination }}
-          path: build/bin/*
-          retention-days: 1
