@@ -1,72 +1,0 @@
-name: Windows - Core
-
-on:
-  release:
-    types: [published]
-  # pull_request:
-
-jobs:
-  build-core-windows:
-    runs-on: windows-2019
-
-    env:
-      GIT_COMMIT: ${{ github.sha }}
-      BONJOUR_BASE_DIR: ${{ github.workspace }}\deps\bonjour
-      SYNERGY_NO_LEGACY: "1"
-      SYNERGY_NO_TESTS: "1"
-      SYNERGY_STATIC_OPENSSL: "1"
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Cache Bonjour
-        id: cache-bonjour
-        uses: actions/cache@v1
-        with:
-          path: ${{ env.BONJOUR_BASE_DIR }}
-          key: ${{ runner.os }}-Bonjour
-
-      - name: Install Bonjour SDK
-        if: steps.cache-bonjour.outputs.cache-hit != 'true'
-        run: |
-          New-Item -Force -ItemType Directory -Path "$env:BONJOUR_BASE_DIR"
-          $client = new-object System.Net.WebClient
-          $client.DownloadFile("https://binaries.symless.com/bonjour/BonjourSDK.zip",".\bonjoursdk.zip")
-          [System.IO.Compression.ZipFile]::ExtractToDirectory(".\bonjoursdk.zip", "$env:BONJOUR_BASE_DIR")
-
-      - name: Install OpenSSL
-        run: |
-          choco uninstall openssl -y --ignore-autouninstaller-failure --no-progress
-          choco install openssl -y --no-progress
-
-      - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.0.2
-
-      - name: Build
-        env:
-          CMAKE_PREFIX_PATH: "C:\\Program Files\\OpenSSL-Win64"
-        run: |
-          mkdir build
-          cd build
-          cmake -DCMAKE_BUILD_TYPE=Release ..
-          . ./version
-          msbuild synergy-core.sln `
-            /p:Platform="x64" `
-            /p:Configuration=Release `
-            /m
-
-      - uses: anshulrgoyal/upload-s3-action@master
-        if: "github.event_name == 'release'"
-        with:
-          aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: ./build/bin/Release
-          destination_dir: "./synergy3/latest/Windows_x64/"
-
-      - uses: actions/upload-artifact@v2
-        if: "github.event_name == 'pull_request'"
-        with:
-          name: windows
-          path: build/bin/Release/*
-          retention-days: 1
