@@ -5,6 +5,7 @@ Enhancements:
 
 Github Actions:
 - #7148 Fix unstable build for windows core
+- #7156 Change binary storage server
 ===========
 
 v1.14.3-snapshot
